Rework ranking system with performance score and multiple elo
